# STREAMLIT

./: .gitignore  pyproject.toml  requirements.txt
backend/: backend.py  modal_app.py
backend/inference_pipeline/: bloodpool.py  main.py  segment.py
backend/inference_pipeline/configs/: config.yaml
backend/inference_pipeline/utils/: __init__.py  dicom_dataset.py
streamlit-app/frontend/: app.py
streamlit-app/frontend/files/extracted_P5/: JDB-36-GHI-4506790001.dcm  JDB-36-GHI-4506790002.dcm  JDB-36-GHI-4506790003.dcm  JDB-36-GHI-4506790008.dcm  JDB-36-GHI-4506790009.dcm  JDB-36-GHI-4506790015.dcm  JDB-36-GHI-4506790016.dcm  JDB-36-GHI-4506790020.dcm  JDB-36-GHI-4506790021.dcm  JDB-36-GHI-4506790024.dcm  JDB-36-GHI-4506790028.dcm  JDB-36-GHI-4506790029.dcm  JDB-36-GHI-4506790031.dcm  JDB-36-GHI-4506790033.dcm  JDB-36-GHI-4506790034.dcm  JDB-36-GHI-4506790035.dcm  JDB-36-GHI-4506790039.dcm  JDB-36-GHI-4506790044.dcm  JDB-36-GHI-4506790046.dcm  JDB-36-GHI-4506790051.dcm  JDB-36-GHI-4506790052.dcm  JDB-36-GHI-4506790056.dcm  JDB-36-GHI-4506790057.dcm  JDB-36-GHI-4506790058.dcm  JDB-36-GHI-4506790061.dcm  JDB-36-GHI-4506790063.dcm  JDB-36-GHI-4506790064.dcm  JDB-36-GHI-4506790067.dcm  JDB-36-GHI-4506790068.dcm  JDB-36-GHI-4506790069.dcm  JDB-36-GHI-4506790070.dcm  JDB-36-GHI-4506790072.dcm  JDB-36-GHI-4506790073.dcm  JDB-36-GHI-4506790074.dcm  JDB-36-GHI-4506790075.dcm  JDB-36-GHI-4506790080.dcm  (+124 more)
streamlit-app/inference_pipeline/: bloodpool.py  preprocess.py  segment.py
streamlit-app/inference_pipeline/utils/: transforms.py
streamlit_app/frontend/: app.py
(+159 files in other folders)
